# Razer_Controls

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  fix-permissions.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/gui/: animations.py  icons.py  main.py  main_window.py  theme.py
apps/gui/widgets/: __init__.py  app_matcher.py  battery_monitor.py  binding_editor.py  device_list.py  dpi_editor.py  macro_editor.py  profile_panel.py  razer_controls.py  setup_wizard.py
apps/tray/: hotkey_backends.py  main.py
crates/device_layouts/: schema.py
crates/device_registry/: registry.py
crates/keycode_map/: __init__.py  mapping.py
crates/profile_schema/: __init__.py  schema.py
data/device_layouts/: _template.json
data/device_layouts/keyboards/: blackwidow_v3.json  generic_keyboard.json  huntsman_elite.json
data/device_layouts/keypads/: orbweaver.json  (+2 more)
packaging/flatpak/: io.github.AreteDriver.RazerControls.desktop  io.github.AreteDriver.RazerControls.metainfo.xml
razer-control-center_docs/: README.md
razer-control-center_docs/docs/: ARCHITECTURE.md  CLAUDE_CODE_PROMPTS.md  IMPLEMENTATION_SEQUENCE.md  PROFILE_SCHEMA.md  QUALITY_GATES.md  REPO_LAYOUT.md
services/app_watcher/: __init__.py  watcher.py
services/macro_engine/: __init__.py  player.py  recorder.py
services/openrazer_bridge/: __init__.py  bridge.py
services/remap_daemon/: daemon.py  engine.py
tests/: test_app_watcher.py  test_device_cli.py  test_device_layouts.py  test_device_registry.py  test_gui.py  test_hotkey_backends.py  test_hotkey_editor.py  test_keycode_map.py  test_keymap_check.py  test_macro_cli.py  test_macro_editor_recording.py  test_macro_recorder.py  test_openrazer_bridge.py  test_profile_cli.py  test_profile_loader.py  test_remap_engine.py  test_settings.py  test_setup_wizard.py  test_tray.py  test_zone_editor.py
tools/: device_cli.py  keymap_check.py  macro_cli.py  profile_cli.py
tools/debug/: monitor_all.py  monitor_buttons.py  test_remap.py
(+8 files in other folders)
